--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity" >
 
     <Button
@@ -14,8 +10,31 @@
         android:background="#4193e6"
         android:padding="10dp"
         android:textColor="#ffffff"
+        android:alpha="0"
         android:onClick="loginToRest"
         android:text="@string/login_label"
         android:layout_centerVertical="true" />
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/wappng"
+        android:alpha="0.9"
+        android:scaleType="centerCrop"
+        android:onClick="loginToRest"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Connect with twitter account"
+        android:drawableLeft="@drawable/ic_action_icon_twitter"
+        android:onClick="loginToRest"
+        android:textColor="#fff"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="48dp" />
 
 </RelativeLayout>
