--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -9,22 +9,21 @@
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabs"
         app:pstsShouldExpand="true"
-        android:background="#52acf1"
+        android:background="#FFF"
         app:pstsTextAllCaps="true"
         android:layout_width="match_parent"
         android:textSize="14sp"
-        android:textColor="#fff"
+        android:textColor="#52acf1"
         app:pstsDividerColor="#ffe502"
-        app:pstsIndicatorColor="#fff"
+        app:pstsIndicatorColor="#52acf1"
         app:pstsUnderlineColor="#336699"
         android:layout_height="60dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
-        android:layout_below="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white" />
-
-
+        android:background="@android:color/white"
+        android:layout_below="@+id/tabs"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
